# codeflix

./: .gitignore  .pylintrc  Dockerfile  docker-compose.override.yaml  docker-compose.yaml  pyproject.toml
.devcontainer/: devcontainer.json
.docker/: entrypoint.sh
.docker/zsh/powerlevel10k/: .p10k.zsh
src/__seedwork/application/: dto.py  use_cases.py
src/__seedwork/domain/: entities.py  exceptions.py  repositories.py  validators.py  value_objects.py
src/__seedwork/tests/integration/domain/: test_init_validators.py
src/__seedwork/tests/unit/application/: test_unit_dto.py  test_use_cases.py
src/__seedwork/tests/unit/domain/: test_unit_entities.py  test_unit_repositories.py  test_unit_validators.py  test_unit_value_objects.py
src/category/application/: dto.py  use_cases.py
src/category/domain/: entities.py  repositories.py  validators.py
src/category/infra/: repositories.py
src/category/tests/application/: test_unit_dto.py  test_unit_use_cases.py
src/category/tests/integration/domain/: test_unit_entities.py  test_unit_validator.py
src/category/tests/unit/domain/: test_unit_entities.py
src/category/tests/unit/infra/: test_unit_repositories.py
